20120607 sound.c: switch to using libspectrum_calloc over raw calloc (Fred).
20120607 event.c,fuse.c,memory.c,mempool.c,periph.c,slt.c,tape.c,utils.c:
         switch to using libspectrum_malloc over raw malloc (Fred).
20120607 settings.pl: switch to using libspectrum_malloc over raw malloc (Fred).
20120607 display.c,event.c,fuse.c,machine.c,memory.c,mempool.c,menu.c,periph.c,
         rzx.c,settings.pl,snapshot.c,sound.c,tape.c,ui.c,utils.c:
         switch to using libspectrum_free over free to match our allocations
         (Fred).
20120612 ui/gtk/gtkui.c: replace deprecated gtk_radio_button_group() with
         gtk_radio_button_get_group() (patch #3534178) (Sergio).
20120612 ui/gtk/{debugger.c,gtkui.c,memory.c}: replace direct access to struct
         members with accessor functions (patch #3534179) (Sergio).
20120618 ui/gtk/{Makefile.am,gtkcompat.h,options.pl}: replace deprecated
         gtk_combo_box_new_text and gtk_combo_box_append_text symbols with
         gtk_combo_box_text_new and gtk_combo_box_text_append_text respectively
         (patch #3534182) (Sergio).
20120618 ui/gtk/{gtkinternals.h,pixmaps.c,statusbar.c}: replace pixmaps in the
         statusbar with pixbufs for GTK+ 3 compatibility (patch #3535005)
         (Sergio).
20120630 settings.pl: cleanup XML memory only once right before exiting (bug
         #3537598) (Sergio).
20120708 configure.in,keysyms.pl,ui/gtk/{Makefile.am,confirm.c,debugger.c,
         gtkcompat.h,gtkdisplay.c,gtkinternals.h,gtkjoystick.c,gtkkeyboard.c,
         gtkmouse.c,gtkui.c,memory.c,options.pl,picture.c,pokefinder.c,
         pokemem.c,roms.c,statusbar.c,stock.c}: add GTK+ 3 compatibility (patch
         #3534181) (Sergio).
20120708 machines/{spec_se.c,tc2048.c,tc2068.c,ts2068.c},memory.[ch],
         peripherals/{dck.c,scld.[ch]}: restore loading of DCK files, fix issue
         loading DCK files with uninitialised RAM (patch #3525261 rkd77 and
         Fred)